babel config and reset pw template changes

--- a/babel.cfg
+++ b/babel.cfg
@@ -1,3 +1,4 @@
 [python: app_pkg/**.py]
 [jinja2: app_pkg/templates/**.html]
+[jinja2: app_pkg/templates/**.txt]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
