--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ Jinja2==3.0.3
 langdetect==1.0.9
 Mako==1.1.6
 MarkupSafe==2.0.1
+psycopg2-binary==2.9.2
 PyJWT==2.3.0
 python-dotenv==0.19.2
 pytz==2021.3
@@ -36,4 +37,3 @@ urllib3==1.26.7
 visitor==0.1.3
 Werkzeug==2.0.2
 WTForms==3.0.0
-psycopg2-binary
