--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,13 @@ app_pkg/translations/*/LC_MESSAGES/messages.mo
 
 # Docker files
 docker
+
 # Files required for Docker Branch, but not for Heroku
-boot.sh
-Dockerfile
+# boot.sh
+# Dockerfile
+# Files required for Heroku Branch, but not for Docker
+# Procfile
+# runtime.txt
 
 # pycache files
 __pycache__
