--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ venv
 logs
 *.log
 
-# Database files
+# SQLite Database files
 app_pkg.db
 
 # Babel translation files
@@ -26,9 +26,10 @@ docker
 # Files required for Docker Branch, but not for Heroku
 # boot.sh
 # Dockerfile
+
 # Files required for Heroku Branch, but not for Docker
-# Procfile
-# runtime.txt
+Procfile
+runtime.txt
 
 # pycache files
 __pycache__
