--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,8 @@ docker
 # Dockerfile
 
 # Files required for Heroku Branch, but not for Docker
-Procfile
-runtime.txt
+# Procfile
+# runtime.txt
 
 # pycache files
 __pycache__
