--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Environment variables
 .env
+.dbenv
 .flaskenv
 
 # Virtual Environment files
@@ -22,6 +23,7 @@ app_pkg/translations/*/LC_MESSAGES/messages.mo
 
 # Docker files
 docker
+docker_commands.txt
 
 # Files required for Docker Branch, but not for Heroku
 # boot.sh
