--- a/compose.yaml
+++ b/compose.yaml
@@ -9,7 +9,7 @@ services:
     ports:
       - 8000:5000
     links:
-      - mysqldb:dbserver
+      - mysqldb
     depends_on:
       mysqldb:
         condition: service_healthy
@@ -25,8 +25,6 @@ services:
       interval: 3s
       retries: 5
       start_period: 30s
-    ports:
-      - 3306:3306
 
 volumes:
   db-data:
