--- a/compose.yaml
+++ b/compose.yaml
@@ -18,6 +18,8 @@ services:
     container_name: mysql_test
     image: mysql:latest
     env_file: database.conf
+    ports:
+      - "32000:3306"
     volumes:
       - db-data:/var/lib/mysql
     healthcheck:
