--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.9
 click==8.0.3
 colorama==0.4.4
+defusedxml==0.7.1
 Deprecated==1.2.13
 dnspython==2.1.0
 dominate==2.6.0
@@ -15,6 +16,7 @@ flake8==4.0.1
 Flask==2.0.2
 Flask-Babel==2.0.0
 Flask-Bootstrap==3.3.7.1
+Flask-HTTPAuth==4.5.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
 Flask-Migrate==3.1.0
@@ -23,6 +25,7 @@ Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
 gunicorn==20.1.0
+httpie==3.0.2
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
@@ -30,6 +33,7 @@ langdetect==1.0.9
 Mako==1.1.6
 MarkupSafe==2.0.1
 mccabe==0.6.1
+multidict==6.0.2
 mypy-extensions==0.4.3
 packaging==21.3
 pathspec==0.9.0
@@ -37,12 +41,15 @@ platformdirs==2.5.0
 psycopg2-binary==2.9.2
 pycodestyle==2.8.0
 pyflakes==2.4.0
+Pygments==2.11.2
 PyJWT==2.3.0
 pyparsing==3.0.7
+PySocks==1.7.1
 python-dotenv==0.19.2
 pytz==2021.3
 redis==4.1.4
 requests==2.26.0
+requests-toolbelt==0.9.1
 rq==1.10.1
 six==1.16.0
 SQLAlchemy==1.4.28
